[Java] Remove unused JVM arg